<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/door_blue"
    tools:context=".GreetingFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/doorOpen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/doorOpeningAnimation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="false"
        app:lottie_speed="2.0"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/dooropen" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/doorJitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/doorOpenClose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/doorjitter" />

    <TextView
        android:id="@+id/landing_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bebas_neue"
        android:text="@string/greetings"
        android:textColor="#FFFFFF"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.311" />

    <Button
        android:id="@+id/greetingButton"
        android:layout_width="129dp"
        android:layout_height="204dp"
        android:background="@color/clear"
        android:contentDescription="@string/doorbutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/landing_greeting"
        app:layout_constraintVertical_bias="0.271" />


</androidx.constraintlayout.widget.ConstraintLayout>