<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/door_blue"
    tools:context=".LoginChoicesFragment">


    <Button
        android:id="@+id/loginButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="164dp"
        android:backgroundTint="@color/clear"
        android:fontFamily="@font/bebas_neue"
        android:hapticFeedbackEnabled="true"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/createAccountButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/clear"
        android:fontFamily="@font/bebas_neue"
        android:hapticFeedbackEnabled="true"
        android:text="@string/create_account"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />


    <LinearLayout
        android:id="@+id/loginWithGoogleButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="242dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/clear"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountButton">

        <TextView
            android:id="@+id/login_with_google_text"
            android:layout_width="192dp"
            android:layout_height="64dp"
            android:fontFamily="@font/bebas_neue"
            android:gravity="center"
            android:text="@string/login_with"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <ImageView
            android:layout_width="41dp"
            android:layout_height="38dp"
            android:scaleType="centerCrop"
            android:src="@drawable/googlelogo" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/theWallButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="242dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/clear"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginWithGoogleButton"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/theWallText"
            android:layout_width="170dp"
            android:layout_height="64dp"
            android:fontFamily="@font/bebas_neue"
            android:gravity="center"
            android:text="The Wall"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <ImageView
            android:layout_width="76dp"
            android:layout_height="64dp"
            android:scaleType="centerCrop"
            android:scaleX=".8"
            android:scaleY=".8"
            android:src="@drawable/ic_wallicon" />

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/doorDraw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/doorDrawingAnimation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="false"
        app:lottie_speed="3"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/doordrawing" />

</androidx.constraintlayout.widget.ConstraintLayout>